Tests/Runtime2/Error/Multilingual/.build/throwerror.pr
{
  "name": "ThrowError",
  "steps": [
    {
      "index": 0,
      "text": "throw \u0022intentional error\u0022",
      "lineNumber": 2,
      "indent": 0,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "message",
              "value": "intentional error",
              "type": "string"
            }
          ],
          "errors": [],
          "warnings": []
        }
      ],
      "errors": [],
      "warnings": [],
      "waitForExecution": true
    }
  ],
  "subGoals": [],
  "visibility": 1,
  "path": "/ThrowError.goal",
  "prPath": "/.build/throwerror.pr",
  "hash": "1aed39b583d1bddf5c62fd52b1b0c456cfe0f0a2fc018f13f634e3e52573e767",
  "isSetup": false,
  "isEvent": false,
  "isTest": false,
  "errors": [],
  "warnings": [],
  "fullPath": "ThrowError"
}